# android-enterprise-lockdown

./: frobozz-policies.json  frobozz-policies.jsonc  pyproject.toml  quickstart.py
LobataHassles/: __init__.py  __main__.py
cache/: API-androidmanagement-v1.json  devices.json  enterprises.json  policies.json  webApps.json
cache-Laser-MID1089IPS/: pm-list-features  pm-list-libraries  pm-list-packages  pm-list-packages-f  pm-list-permission-groups  pm-list-permissions
cache-Lenovo-M1gen1/: pm-list-features  pm-list-libraries  pm-list-packages  pm-list-packages-f  pm-list-permission-groups  pm-list-permissions
cache/enterprises/: LC02kggfh1.json
cache/enterprises/LC02kggfh1/applications/: amirz.musicfx.material.json  amirz.rootless.nexuslauncher.json  com.LAPARCELA.nihonoari.json  com.agateau.tinywheels.android.json  com.android.chrome.json  com.collabora.libreoffice.json  com.dozingcatsoftware.bouncy.json  com.duolingo.json  com.google.android.apps.docs.editors.docs.json  com.google.android.apps.docs.editors.sheets.json  com.google.android.apps.docs.editors.slides.json  com.google.android.apps.docs.json  com.google.android.apps.mapslite.json  com.google.android.apps.meetings.json  com.google.android.apps.messaging.json  com.google.android.apps.nexuslauncher.json  com.google.android.apps.photosgo.json  com.google.earth.json  (+67 more)
cache/managedProperties/: com.android.chrome.json  com.google.android.apps.docs.editors.sheets.json  com.microsoft.emmx.json  com.microsoft.launcher.json  com.microsoft.office.outlook.json
debian/: changelog  control  rules
icons/: URLs.txt
(+65 files in other folders)
